# Jogo_tecProg_BrasileirinhoPlusPlus

./: CMakeLists.txt  Collider.cpp  Collider.h  Elemento.h  Entidade.cpp  Entidade.h  Fase.cpp  Fase.h  Fase_A.cpp  Fase_A.h  Fase_B.cpp  Fase_B.h  GameState.cpp  GameState.h  GerenciadorDeColisoes.cpp  GerenciadorDeColisoes.h  GerenciadorGrafico.cpp  GerenciadorGrafico.h  Inimigo.cpp  Inimigo.h  Inimigo_A.cpp  Inimigo_A.h  Inimigo_B.cpp  Inimigo_B.h  Inimigo_Boss.cpp  Inimigo_Boss.h  InterfaceState.cpp  InterfaceState.h  Jogador.cpp  Jogador.h  Jogador_1.cpp  Jogador_1.h  Jogador_2.cpp  Jogador_2.h  Jogo.cpp  Jogo.h  Lista.h  ListaEntidades.cpp  ListaEntidades.h  ListaInimigos.cpp  (+38 more)
Fases/: FaseTest.txt  Fase_A.txt  Fase_B.txt
include/: Animator.h  Background.h  Boss.h  Character.h  Enemy.h  Enemy1.h  Enemy2.h  Entity.h  Level.h  LevelBuilder.h  LevelBuilder1.h  LevelBuilder2.h  ListEnemy.h  ListEntity.h  ListObstacles.h  ListPlayer.h  ListT.h  MainGame.h  Menu.h  Obstacle.h  Platform.h  Player.h
src/: Animator.cpp  Background.cpp  Boss.cpp  Character.cpp  Enemy.cpp  Enemy1.cpp  Enemy2.cpp  Entity.cpp  Level.cpp  LevelBuilder.cpp  LevelBuilder1.cpp  LevelBuilder2.cpp  ListEnemy.cpp  ListEntity.cpp  ListObstacles.cpp  ListPlayer.cpp  MainGame.cpp  Menu.cpp  Obstacle.cpp  Platform.cpp  Player.cpp
